# infuq-others

./: .gitignore  1.txt  README.md  commit.py  main.c  package-lock.json
Assembly/: month.asm  mov.asm  t_1.asm  t_3.asm
C/: CMakeLists.txt  _array.c  _array.h  _enum.c  _enum.h  _malloc.c  _other.c  _other.h  _pipe.c  _pipe.h  _process.c  _struct.h  _struct_1.c  _struct_2.c  _struct_3.c  _struct_4.c  _struct_align_1.c  _struct_align_2.c  _union.c  _union.h  _union_2.c  a.out  array_main.c  enum_main.c  enum_size.c  fib_main.c  main.c  memset_main.c  struct_align_main.c  struct_align_main_2.c  struct_main.c  struct_main_2.c  struct_main_3.c  struct_main_4.c  union_main.c
Go/: go.mod  main  main.go
Java/: .project  FirstUniqueCharacter.java  (+6 more)
OS/: '操作系统真象还原'代码的地址.txt  .gitignore  CMakeLists.txt  制作命令.txt  无用代码.txt  查看命令.txt  结构图.eddx  错误集锦.txt
OS/1-MBR-LOADER/: bochsrc  boot.asm  loader.asm  makefile  mbr.asm  制作命令.txt  功能说明.txt
OS/10-UserProcess/: makefile
OS/10-UserProcess-v2/: makefile  功能说明.txt
OS/10-UserProcess-v2/device/: ioqueue.c  timer.c
OS/10-UserProcess-v2/kernel/: init.c  interrupt.c  kernel.asm  main.c  memory.c
OS/10-UserProcess-v2/lib/kernel/: global.h  memory.h
OS/10-UserProcess-v2/process/: process.c  process.h  tss.c
OS/10-UserProcess-v2/thread/: switch.asm  sync.c  sync.h  thread.c  thread.h
OS/10-UserProcess/boot/: boot.asm  loader.asm  mbr.asm
OS/10-UserProcess/boot/include/: boot.inc
OS/10-UserProcess/device/: console.c  console.h  ioqueue.c  ioqueue.h  keyboard.c  keyboard.h  timer.c  timer.h
OS/10-UserProcess/kernel/: init.c  interrupt.c  kernel.asm  main.c  memory.c
OS/10-UserProcess/lib/: string.c  string.h
OS/10-UserProcess/lib/kernel/: bitmap.c  bitmap.h  debug.h  global.h  init.h  interrupt.h  list.c  list.h  memory.h  print.h
OS/10-UserProcess/process/: process.c  process.h  tss.c  tss.h
OS/10-UserProcess/thread/: switch.asm  thread.c  thread.h
OS/10-UserProcess6/: bochsrc
OS/10-UserProcess6/device/: console.h  keyboard.c
OS/10-UserProcess6/kernel/: memory.c
OS/10-UserProcess6/process/: tss.c
OS/11-Syscall/: bochsrc  makefile  功能说明.txt
OS/11-Syscall/boot/: loader.asm
OS/11-Syscall/device/: timer.c
OS/11-Syscall/kernel/: init.c  interrupt.c  kernel.asm  main.c  memory.c
OS/11-Syscall/lib/kernel/: bitmap.h  print.h
OS/11-Syscall/lib/user/: syscall.c  syscall.h
OS/11-Syscall/process/: process.h  syscall-init.c  syscall-init.h  tss.c  tss.h
OS/11-Syscall/thread/: thread.c  thread.h
OS/12-HeapMM/: 功能说明.txt
OS/13-HardDiskDriver/: bochsrc  makefile  功能说明.txt
OS/13-HardDiskDriver/device/: ide.c  ide.h  ioqueue.c  timer.c
OS/13-HardDiskDriver/kernel/: init.c  interrupt.c  kernel.asm  main.c
OS/13-HardDiskDriver/lib/: string.c  string.h
OS/13-HardDiskDriver/lib/kernel/: bitmap.c  bitmap.h  debug.c  debug.h  interrupt.h
OS/13-HardDiskDriver/process/: tss.c  tss.h
OS/13-HardDiskDriver/thread/: switch.asm  sync.c  thread.h
OS/2-MBR-LOADER(Protect)/: bochsrc  boot.asm  boot.inc  loader.asm  makefile  mbr.asm  制作命令.txt  功能说明.txt
OS/3-MBR-LOADER(Page)/: bochsrc  boot.asm  boot.inc  loader.asm  makefile  mbr.asm  制作命令.txt
OS/4-MBR-LOADER-KERNEL/: bochsrc  loader.asm  main.c  makefile  制作命令.txt  功能说明.txt
OS/4-MBR-LOADER-KERNEL/boot/: boot.asm  loader.asm
OS/4-MBR-LOADER-KERNEL/include/: boot.inc
OS/4-MBR-LOADER-KERNEL/kernel/: main.c
OS/4-MBR-LOADER-KERNEL/lib/kernel/: _io.asm  _io.h  _types.h  print.asm  print.h  types.h
OS/5-MBR-LOADER-KERNEL-INTR/: bochsrc  makefile  制作命令.txt  功能说明.txt
OS/5-MBR-LOADER-KERNEL-INTR/boot/: boot.asm  loader.asm
OS/5-MBR-LOADER-KERNEL-INTR/include/: boot.inc
OS/5-MBR-LOADER-KERNEL-INTR/kernel/: init.c  interrupt.c  kernel.asm  main.c
OS/5-MBR-LOADER-KERNEL-INTR/lib/kernel/: global.h  interrupt.h  io.h  print.asm  print.h
OS/6-MBR-LOADER-KERNEL-INTR-MEM/: bochsrc  makefile  mbr.asm  制作命令.txt  功能说明.txt
OS/6-MBR-LOADER-KERNEL-INTR-MEM/boot/: loader.asm  mbr.asm
OS/6-MBR-LOADER-KERNEL-INTR-MEM/kernel/: bitmap.c  init.c  interrupt.c  kernel.asm  main.c  memory.c
OS/6-MBR-LOADER-KERNEL-INTR-MEM/lib/: stdint.h  string.c
OS/6-MBR-LOADER-KERNEL-INTR-MEM/lib/kernel/: bitmap.h  interrupt.h  memory.h  print.asm  print.h
OS/7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/: makefile  制作命令.txt  功能说明.txt
OS/7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/boot/: boot.asm  loader.asm
OS/7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/device/: timer.c  timer.h
OS/7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/kernel/: init.c  interrupt.c  kernel.asm  main.c  memory.c
OS/7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/: string.c
OS/7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/: bitmap.c  bitmap.h  global.h  init.h  interrupt.h  io.h  list.c  list.h  memory.h  print.asm
OS/7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/thread/: switch.asm  thread.c  thread.h
OS/8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/: makefile  制作命令.txt
OS/8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/boot/: loader.asm
OS/8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/device/: console.c  timer.c  timer.h
OS/8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/kernel/: init.c  interrupt.c  kernel.asm  main.c  memory.c
OS/8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/: bitmap.c  interrupt.h  io.h  list.c  memory.h  print.h
OS/8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/thread/: switch.asm  sync.c  sync.h  thread.c  thread.h
OS/9-Keyboard/: bochsrc  makefile  功能说明.txt
OS/9-Keyboard-v2/: makefile  功能说明.txt
OS/9-Keyboard-v2/device/: ioqueue.h  keyboard.c  keyboard.h
OS/9-Keyboard-v2/kernel/: debug.h  init.c  interrupt.c  main.c
OS/9-Keyboard-v2/lib/kernel/: memory.h
OS/9-Keyboard/device/: ioqueue.c  ioqueue.h  keyboard.c  timer.c
OS/9-Keyboard/kernel/: debug.c  debug.h  init.c  interrupt.c  kernel.asm  main.c
OS/9-Keyboard/lib/kernel/: bitmap.c  global.h  interrupt.h  list.c
OS/9-Keyboard/thread/: thread.c  thread.h
OS/MBR-LOADER/: 制作命令.txt
OS/MBR-LOADER(Page)/: loader.asm  mbr.asm  制作命令.txt  功能说明.txt
OS/MBR-LOADER(Protect)/: loader.asm  制作命令.txt
OS/tools/TC/: R.BAK  SSS.C  TEST.BAK  dbconf.ak  dbmapper.ak  stdout.txt
(+830 files in other folders)
