cmake_minimum_required(VERSION 3.22)
project(OS)

set(CMAKE_CXX_STANDARD 14)

include_directories(10-UserProcess/device)
include_directories(10-UserProcess/lib)
include_directories(10-UserProcess/lib/kernel)
include_directories(10-UserProcess/process)
include_directories(10-UserProcess/thread)
include_directories(11-Syscall/device)
include_directories(11-Syscall/lib)
include_directories(11-Syscall/lib/kernel)
include_directories(11-Syscall/lib/user)
include_directories(11-Syscall/process)
include_directories(11-Syscall/thread)
include_directories(4-MBR-LOADER-KERNEL/lib)
include_directories(4-MBR-LOADER-KERNEL/lib/kernel)
include_directories(5-MBR-LOADER-KERNEL-INTR/lib)
include_directories(5-MBR-LOADER-KERNEL-INTR/lib/kernel)
include_directories(6-MBR-LOADER-KERNEL-INTR-MEM/lib)
include_directories(6-MBR-LOADER-KERNEL-INTR-MEM/lib/kernel)
include_directories(7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/device)
include_directories(7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib)
include_directories(7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel)
include_directories(7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/thread)
include_directories(8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/device)
include_directories(8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib)
include_directories(8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel)
include_directories(8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/thread)
include_directories(9-Keyboard/device)
include_directories(9-Keyboard/kernel)
include_directories(9-Keyboard/lib)
include_directories(9-Keyboard/lib/kernel)
include_directories(9-Keyboard/thread)
include_directories(tools/TC)
include_directories(tools/TC/INCLUDE)
include_directories(tools/TC/INCLUDE/SYS)

add_executable(OS
        10-UserProcess/device/console.c
        10-UserProcess/device/console.h
        10-UserProcess/device/ioqueue.c
        10-UserProcess/device/ioqueue.h
        10-UserProcess/device/keyboard.c
        10-UserProcess/device/keyboard.h
        10-UserProcess/device/timer.c
        10-UserProcess/device/timer.h
        10-UserProcess/kernel/init.c
        10-UserProcess/kernel/interrupt.c
        10-UserProcess/kernel/main.c
        10-UserProcess/kernel/memory.c
        10-UserProcess/lib/kernel/bitmap.c
        10-UserProcess/lib/kernel/bitmap.h
        10-UserProcess/lib/kernel/debug.c
        10-UserProcess/lib/kernel/debug.h
        10-UserProcess/lib/kernel/global.h
        10-UserProcess/lib/kernel/init.h
        10-UserProcess/lib/kernel/interrupt.h
        10-UserProcess/lib/kernel/io.h
        10-UserProcess/lib/kernel/list.c
        10-UserProcess/lib/kernel/list.h
        10-UserProcess/lib/kernel/memory.h
        10-UserProcess/lib/kernel/print.h
        10-UserProcess/lib/stdint.h
        10-UserProcess/lib/string.c
        10-UserProcess/lib/string.h
        10-UserProcess/process/process.c
        10-UserProcess/process/process.h
        10-UserProcess/process/tss.c
        10-UserProcess/process/tss.h
        10-UserProcess/thread/sync.c
        10-UserProcess/thread/sync.h
        10-UserProcess/thread/thread.c
        10-UserProcess/thread/thread.h
        11-Syscall/device/console.c
        11-Syscall/device/console.h
        11-Syscall/device/ioqueue.c
        11-Syscall/device/ioqueue.h
        11-Syscall/device/keyboard.c
        11-Syscall/device/keyboard.h
        11-Syscall/device/timer.c
        11-Syscall/device/timer.h
        11-Syscall/kernel/init.c
        11-Syscall/kernel/interrupt.c
        11-Syscall/kernel/main.c
        11-Syscall/kernel/memory.c
        11-Syscall/lib/kernel/bitmap.c
        11-Syscall/lib/kernel/bitmap.h
        11-Syscall/lib/kernel/debug.c
        11-Syscall/lib/kernel/debug.h
        11-Syscall/lib/kernel/global.h
        11-Syscall/lib/kernel/init.h
        11-Syscall/lib/kernel/interrupt.h
        11-Syscall/lib/kernel/io.h
        11-Syscall/lib/kernel/list.c
        11-Syscall/lib/kernel/list.h
        11-Syscall/lib/kernel/memory.h
        11-Syscall/lib/kernel/print.h
        11-Syscall/lib/user/syscall.c
        11-Syscall/lib/user/syscall.h
        11-Syscall/lib/stdint.h
        11-Syscall/lib/string.c
        11-Syscall/lib/string.h
        11-Syscall/process/process.c
        11-Syscall/process/process.h
        11-Syscall/process/syscall-init.c
        11-Syscall/process/syscall-init.h
        11-Syscall/process/tss.c
        11-Syscall/process/tss.h
        11-Syscall/thread/sync.c
        11-Syscall/thread/sync.h
        11-Syscall/thread/thread.c
        11-Syscall/thread/thread.h
        4-MBR-LOADER-KERNEL/kernel/main.c
        4-MBR-LOADER-KERNEL/lib/kernel/_io.h
        4-MBR-LOADER-KERNEL/lib/kernel/_types.h
        4-MBR-LOADER-KERNEL/lib/kernel/print.h
        5-MBR-LOADER-KERNEL-INTR/kernel/init.c
        5-MBR-LOADER-KERNEL-INTR/kernel/interrupt.c
        5-MBR-LOADER-KERNEL-INTR/kernel/main.c
        5-MBR-LOADER-KERNEL-INTR/lib/kernel/global.h
        5-MBR-LOADER-KERNEL-INTR/lib/kernel/init.h
        5-MBR-LOADER-KERNEL-INTR/lib/kernel/interrupt.h
        5-MBR-LOADER-KERNEL-INTR/lib/kernel/io.h
        5-MBR-LOADER-KERNEL-INTR/lib/kernel/print.h
        6-MBR-LOADER-KERNEL-INTR-MEM/kernel/bitmap.c
        6-MBR-LOADER-KERNEL-INTR-MEM/kernel/init.c
        6-MBR-LOADER-KERNEL-INTR-MEM/kernel/interrupt.c
        6-MBR-LOADER-KERNEL-INTR-MEM/kernel/main.c
        6-MBR-LOADER-KERNEL-INTR-MEM/kernel/memory.c
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/kernel/bitmap.h
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/kernel/global.h
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/kernel/init.h
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/kernel/interrupt.h
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/kernel/io.h
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/kernel/memory.h
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/kernel/print.h
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/stdint.h
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/string.c
        6-MBR-LOADER-KERNEL-INTR-MEM/lib/string.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/device/timer.c
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/device/timer.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/kernel/init.c
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/kernel/interrupt.c
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/kernel/main.c
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/kernel/memory.c
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/bitmap.c
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/bitmap.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/global.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/init.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/interrupt.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/io.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/list.c
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/list.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/memory.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/kernel/print.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/stdint.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/string.c
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/lib/string.h
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/thread/thread.c
        7-MBR-LOADER-KERNEL-INTR-MEM-THREAD/thread/thread.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/device/console.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/device/console.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/device/timer.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/device/timer.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/kernel/init.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/kernel/interrupt.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/kernel/main.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/kernel/memory.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/bitmap.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/bitmap.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/global.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/init.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/interrupt.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/io.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/list.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/list.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/memory.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/kernel/print.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/stdint.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/string.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/lib/string.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/thread/sync.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/thread/sync.h
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/thread/thread.c
        8-MBR-LOADER-KERNEL-INTR-MEM-THREAD-LOCK/thread/thread.h
        9-Keyboard/device/console.c
        9-Keyboard/device/console.h
        9-Keyboard/device/ioqueue.c
        9-Keyboard/device/ioqueue.h
        9-Keyboard/device/keyboard.c
        9-Keyboard/device/keyboard.h
        9-Keyboard/device/timer.c
        9-Keyboard/device/timer.h
        9-Keyboard/kernel/debug.c
        9-Keyboard/kernel/debug.h
        9-Keyboard/kernel/init.c
        9-Keyboard/kernel/interrupt.c
        9-Keyboard/kernel/main.c
        9-Keyboard/kernel/memory.c
        9-Keyboard/lib/kernel/bitmap.c
        9-Keyboard/lib/kernel/bitmap.h
        9-Keyboard/lib/kernel/global.h
        9-Keyboard/lib/kernel/init.h
        9-Keyboard/lib/kernel/interrupt.h
        9-Keyboard/lib/kernel/io.h
        9-Keyboard/lib/kernel/list.c
        9-Keyboard/lib/kernel/list.h
        9-Keyboard/lib/kernel/memory.h
        9-Keyboard/lib/kernel/print.h
        9-Keyboard/lib/stdint.h
        9-Keyboard/lib/string.c
        9-Keyboard/lib/string.h
        9-Keyboard/thread/sync.c
        9-Keyboard/thread/sync.h
        9-Keyboard/thread/thread.c
        9-Keyboard/thread/thread.h
        tools/TC/INCLUDE/SYS/STAT.H
        tools/TC/INCLUDE/SYS/TIMEB.H
        tools/TC/INCLUDE/SYS/TYPES.H
        tools/TC/INCLUDE/ALLOC.H
        tools/TC/INCLUDE/ASSERT.H
        tools/TC/INCLUDE/BIOS.H
        tools/TC/INCLUDE/CONIO.H
        tools/TC/INCLUDE/CTYPE.H
        tools/TC/INCLUDE/DIR.H
        tools/TC/INCLUDE/DOS.H
        tools/TC/INCLUDE/ERRNO.H
        tools/TC/INCLUDE/FCNTL.H
        tools/TC/INCLUDE/FLOAT.H
        tools/TC/INCLUDE/GRAPHICS.H
        tools/TC/INCLUDE/IO.H
        tools/TC/INCLUDE/LIMITS.H
        tools/TC/INCLUDE/MATH.H
        tools/TC/INCLUDE/MEM.H
        tools/TC/INCLUDE/PROCESS.H
        tools/TC/INCLUDE/SETJMP.H
        tools/TC/INCLUDE/SHARE.H
        tools/TC/INCLUDE/SIGNAL.H
        tools/TC/INCLUDE/STDARG.H
        tools/TC/INCLUDE/STDDEF.H
        tools/TC/INCLUDE/STDIO.H
        tools/TC/INCLUDE/STDLIB.H
        tools/TC/INCLUDE/STRING.H
        tools/TC/INCLUDE/TIME.H
        tools/TC/INCLUDE/VALUES.H
        tools/TC/BGIDEMO.C
        tools/TC/CBAR.C
        tools/TC/CPASDEMO.C
        tools/TC/GETOPT.C
        tools/TC/MAIN.C
        tools/TC/MATHERR.C
        tools/TC/MCALC.C
        tools/TC/MCALC.H
        tools/TC/MCDISPLY.C
        tools/TC/MCINPUT.C
        tools/TC/MCOMMAND.C
        tools/TC/MCPARSER.C
        tools/TC/MCUTIL.C
        tools/TC/SSIGNAL.C
        tools/TC/SSS.C
        tools/TC/WORDCNT.C)
